// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity should push operations and transfers with the same hash into one group and not mutate activities 1`] = `
Array [
  Array [
    Object {
      "amount": "1",
      "destination": Object {
        "address": "address3",
        "alias": "alias3",
      },
      "entrypoint": "",
      "hash": "hash2",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "pending",
      "timestamp": 10,
      "type": "transaction",
    },
    Object {
      "amount": "1",
      "destination": Object {
        "address": "address4",
        "alias": "alias4",
      },
      "entrypoint": "",
      "hash": "hash2",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "pending",
      "timestamp": 9,
      "type": "transaction",
    },
  ],
  Array [
    Object {
      "amount": "0",
      "destination": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "entrypoint": "transfer",
      "hash": "hash4",
      "source": Object {
        "address": "address4",
        "alias": "alias4",
      },
      "status": "applied",
      "timestamp": 8,
      "type": "transaction",
    },
  ],
  Array [
    Object {
      "amount": "0",
      "destination": Object {
        "address": "address3",
        "alias": "alias3",
      },
      "hash": "hash3",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "applied",
      "timestamp": 6,
      "type": "delegation",
    },
  ],
  Array [
    Object {
      "address": "address1",
      "amount": "0",
      "destination": Object {
        "address": "address1",
        "alias": "alias1",
      },
      "entrypoint": "transfer",
      "hash": "hash1",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "applied",
      "timestamp": 1,
      "type": "transaction",
    },
  ],
]
`;

exports[`activity should sort operations and transfers by timestamp in descending order 1`] = `
Array [
  Array [
    Object {
      "amount": "1",
      "destination": Object {
        "address": "address3",
        "alias": "alias3",
      },
      "entrypoint": "",
      "hash": "hash2",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "pending",
      "timestamp": 10,
      "type": "transaction",
    },
  ],
  Array [
    Object {
      "amount": "0",
      "destination": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "entrypoint": "transfer",
      "hash": "hash4",
      "source": Object {
        "address": "address4",
        "alias": "alias4",
      },
      "status": "applied",
      "timestamp": 8,
      "type": "transaction",
    },
  ],
  Array [
    Object {
      "amount": "0",
      "destination": Object {
        "address": "address3",
        "alias": "alias3",
      },
      "hash": "hash3",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "applied",
      "timestamp": 6,
      "type": "delegation",
    },
  ],
  Array [
    Object {
      "address": "address1",
      "amount": "0",
      "destination": Object {
        "address": "address1",
        "alias": "alias1",
      },
      "entrypoint": "transfer",
      "hash": "hash1",
      "source": Object {
        "address": "address2",
        "alias": "alias2",
      },
      "status": "applied",
      "timestamp": 1,
      "type": "transaction",
    },
  ],
]
`;
